--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,40 @@
+*{
+
+    box-sizing: border-box;
+}
+
+
 table,tr,th,td{
     border: 1px solid black;
     border-collapse: collapse;
 }
 
+#img
+{
+
+    float: left;
+    
+}
+
+body{
+
+    font-family: Arial;
+    padding: 0px;
+    background-color: whitesmoke;
+}
+
+img {
+    border: 1px solid #ddd;
+    padding: 5px;
+    width: 200px;
+    
+    height: 200px;
+  }
+  nav ul li {
+    display: inline-block;
+    padding: 20px;
+  }
+
+  nav{
+      margin-bottom: 20px;
+  }
