--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,31 @@
 table,tr,th,td{
     border: 1px solid black;
     border-collapse: collapse;
+    text-align: center;
+    margin-left: 10px;
+    overflow-x:auto ;
 }
+
+td:nth-child(1){
+    font-weight: bold;
+}
+
+th{
+    padding: 10px;
+    height: 50px;
+    font-family: 'Otomanopee One', sans-serif; 
+
+}
+
+td{
+    height: 50px;
+}
+tr th:nth-child(1){
+    color: blue;
+    font-size: 20px;
+}
+
+
 
 #img
 {
@@ -38,4 +62,73 @@ img {
   nav{
       margin-bottom: 20px;
   }
+
+  .salesBackground{
+
+    background:linear-gradient(rgba(166, 255, 0, 0.7),rgb(0, 255, 106));
+    min-height: 100vh;
+    
+  }
+
+ .Link{
+     text-align: center;
+     text-decoration: none;
+     /* margin-bottom: 100px; */
+     float: right;
+     /* display: inline-block; */
+     position: absolute;
+     top: 120px;
+     right: 10px;
+     color: blue;
+     font-family: 'Otomanopee One', sans-serif; 
+
+
+
+    }
+
+ #form{
+
+  margin-top: 150px;
+  /* margin-bottom: 100px; */
+ }
+
+ #logo{
+font-size: 40px;
+font-family: 'Otomanopee One', sans-serif; 
+display: inline-block;
+position: absolute;
+left: 700px;
+top: 30px;
+/* margin-bottom: 100px; */
+
+
+ }
+ .Link:hover{
+     color:red ;
+     transition: 0.4s;
+ }
+
+ label{
+     margin-left: 50px;
+ }
+
+ .submit{
+     margin-left: 670px;
+     width: 8%;
+     height: 20%;
+     padding: 10px;
+     /* border-color: red; */
+     color: blue;
+     color: black;
+ }
+
+ .submit:hover{
+    background-color:rgb(50, 221, 50) ;
+transition: 0.3s;
+color: white;
+ }
+
+
+
+ 
   
